# small_str

./: Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  smallstr.rs
tests/: test.rs
