[package]
name = "small_str"
version = "0.1.0"
edition = "2021"
authors = ["soeur <juzi201314@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/juzi5201314/small_str"
keywords = ["string", "str", "small", "smallvec", "stack", "optimize"]

[dependencies]
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false, optional = true }
smallvec = { version = "2.0.0-alpha.5" }

[dev-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]

serde = ["dep:serde"]
unstable = []
std = ["serde/std", "serde_json/std"]
